<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_main"
        android:fitsSystemWindows="true"
        tools:context="com.findthenotes.findthenotes.view.MainMenu">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/world_image_description"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/img_about"/>
        </android.support.v7.widget.Toolbar>

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/world_image_description"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/img_apprimority_about"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="121dp"
            android:id="@+id/iv_app_logo" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:id="@+id/tv_description"
            android:textStyle="bold"
            android:layout_below="@+id/iv_app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_email"
            android:layout_below="@+id/tv_description"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignRight="@+id/iv_app_logo"
            android:layout_alignEnd="@+id/iv_app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/bt_facebook"
            android:gravity="center"
            android:text="@string/about_site_address"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/tv_email"
            android:layout_centerHorizontal="true" />







    </RelativeLayout>

</RelativeLayout>
