<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.SplashActivity"
    android:background="@mipmap/bg_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_splash"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/img_logo_splash"
                android:layout_marginTop="100dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:text="@string/button_login_connect"
                android:background="@mipmap/bt_entrar"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bt_facebook"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="30dp">

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:background="@color/transparent"
                    facebook:login_text="@string/facebook_button_login"
                    facebook:logout_text="@string/facebook_button_logout"
                     />

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
